Ajuste dos links dos botões

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/rbcastro/francapersonalizados/style.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Franca Personalizados</title>
   </head>
   <body>
@@ -17,19 +26,23 @@
         <!-- <p class="description">
         
         </p> -->
-        <button type="button" class="btn">WhatsApp <i class="fab fa-whatsapp"></i></button>
+        <button type="button" class="btn">
+          <a href="http://bit.ly/whatsFrancapersonalizados">
+            WhatsApp <i class="fab fa-whatsapp"></i
+          ></a>
+        </button>
       </div>
       <div class="social-icons">
         <div class="icon">
-          <a href="/"><i class="fab fa-instagram"></i></a>          
+          <a href="http://bit.ly/Instafrancapersonalizados"><i class="fab fa-instagram"></i></a>
         </div>
         <div class="icon">
-          <a href="#"><i class="fab fa-facebook"></i></a>          
+          <a href="http://bit.ly/Facebookfrancapersonalizados"><i class="fab fa-facebook"></i></a>
         </div>
         <div class="icon">
-          <a href="#"><i class="fa fa-envelope"></i></a>          
+          <a href="mailto:francapersonalizados21@gmail.com"><i class="fa fa-envelope"></i></a>
         </div>
       </div>
-    </div>    
+    </div>
   </body>
 </html>
