Ajustes CSS e links

--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
   <body>
     <div class="wrapper">
       <div class="profile">
-        <img src="logo.png" class="thumbnail" />
+        <img src="https://lh4.googleusercontent.com/pHwlPyWHzjWGwe3j0RVpWhmaoPVLBYI0LWocTEKegRfAvOwTxBaF4Z0Yfuyv8IDuMQCboe4MbOSdJYTn2NAwIig=w16383" class="thumbnail" />
         <h3 class="name">Franca Personalizados</h3>
-        <p class="title">Papelaria Personalizada</p>
-        <!-- <p class="description">
-        
-        </p> -->
-        <button type="button" class="btn">
-          <a href="http://bit.ly/whatsFrancapersonalizados">
-            WhatsApp <i class="fab fa-whatsapp"></i
-          ></a>
-        </button>
-      </div>
+        <p class="title">Papelaria Personalizada</p>        
+          <button class="btn">
+            <a href="http://bit.ly/whatsFrancapersonalizados">
+              WhatsApp <i class="fab fa-whatsapp fa-lg"></i>
+            </a>        
+          <button>
+      </div>    
       <div class="social-icons">
         <div class="icon">
           <a href="http://bit.ly/Instafrancapersonalizados"><i class="fab fa-instagram"></i></a>
